Issue 95741 - implement endorsed mechanism for jax-ws2.1 APIs for wsimport/wsgen ant scripts